--- a/02_PrismDropNavigation/PrismDropNavigation/Views/MainWindow.xaml
+++ b/02_PrismDropNavigation/PrismDropNavigation/Views/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:v="clr-namespace:PrismDropNavigation.Views"
         xmlns:prism="http://prismlibrary.com/"
         prism:ViewModelLocator.AutoWireViewModel="True"
@@ -15,6 +16,12 @@
             <Setter Property="Header" Value="{Binding DataContext.Title, Mode=OneTime}" />
         </Style>
     </Window.Resources>
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <prism:InvokeCommandAction Command="{Binding InitializeCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
 
     <Grid Margin="0,10,0,0">
         <Grid.RowDefinitions>
