--- a/03_PrismDispose/PrismDispose/Views/MainWindow.xaml
+++ b/03_PrismDispose/PrismDispose/Views/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="PrismDispose.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:v="clr-namespace:PrismDispose.Views"
@@ -9,7 +10,13 @@
         mc:Ignorable="d"
         Title="PrismDispose"
         Height="250" Width="400">
-    
+
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Closed">
+            <prism:InvokeCommandAction Command="{Binding ClosedCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
+
     <Grid Margin="0,10,0,0">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
