--- a/04_OxyPlotInspector/OxyPlotInspector/Views/MainImage.xaml
+++ b/04_OxyPlotInspector/OxyPlotInspector/Views/MainImage.xaml
@@ -1,14 +1,44 @@
 ﻿<UserControl x:Class="OxyPlotInspector.Views.MainImage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+             xmlns:r="clr-namespace:Reactive.Bindings.Interactivity;assembly=ReactiveProperty.NET46"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:v="clr-namespace:OxyPlotInspector.Views"
+             xmlns:vec="clr-namespace:OxyPlotInspector.Views.EventConverters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <Image Source="C:/data/Image1.jpg" />
+    <Grid Width="{Binding ActualWidth, ElementName=_Image}"
+          Height="{Binding ActualHeight, ElementName=_Image}" >
+
+        <i:Interaction.Triggers>
+            <i:EventTrigger EventName="PreviewMouseLeftButtonDown">
+                <r:EventToReactiveProperty ReactiveProperty="{Binding MouseDown, Mode=OneTime}" >
+                    <vec:MouseMoveEventToPointConverter />
+                </r:EventToReactiveProperty>
+            </i:EventTrigger>
+            <i:EventTrigger EventName="PreviewMouseLeftButtonUp">
+                <r:EventToReactiveProperty ReactiveProperty="{Binding MouseUp, Mode=OneTime}" IgnoreEventArgs="True" />
+            </i:EventTrigger>
+            <i:EventTrigger EventName="PreviewMouseMove">
+                <r:EventToReactiveProperty ReactiveProperty="{Binding MouseMove, Mode=OneTime}" >
+                    <vec:MouseMoveEventToPointConverter />
+                </r:EventToReactiveProperty>
+            </i:EventTrigger>
+        </i:Interaction.Triggers>
+
+        <Image Name="_Image"
+               Source="C:/data/Image1.jpg" />
+
+        <Line Stroke="Lime"
+              StrokeThickness="2"
+              IsEnabled="{Binding LinePoints.IsEnabled, Mode=OneWay}"
+              X1="{Binding LinePoints.X1, Mode=OneWay}"
+              Y1="{Binding LinePoints.Y1, Mode=OneWay}"
+              X2="{Binding LinePoints.X2, Mode=OneWay}"
+              Y2="{Binding LinePoints.Y2, Mode=OneWay}" />
     </Grid>
 </UserControl>
