--- a/04_OxyPlotInspector/OxyPlotInspector/Views/MainWindow.xaml
+++ b/04_OxyPlotInspector/OxyPlotInspector/Views/MainWindow.xaml
@@ -9,7 +9,7 @@
         xmlns:v="clr-namespace:OxyPlotInspector.Views"
         mc:Ignorable="d"
         Title="OxyPlotInspector"
-        Height="350" Width="400">
+        Height="550" Width="400">
 
     <i:Interaction.Triggers>
         <prism:InteractionRequestTrigger SourceObject="{Binding NotificationRequest}">
@@ -21,6 +21,7 @@
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
@@ -30,6 +31,8 @@
 
         <ContentControl Grid.Row="1"
                         prism:RegionManager.RegionName="ContentRegion" />
+
+        <v:ImageHistogram Grid.Row="2" />
 
     </Grid>
 </Window>
