--- a/04_OxyPlotInspector/OxyPlotInspector/Views/LineLevels.xaml
+++ b/04_OxyPlotInspector/OxyPlotInspector/Views/LineLevels.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="OxyPlotInspector.Views.ImageHistogram"
+﻿<UserControl x:Class="OxyPlotInspector.Views.LineLevels"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -10,6 +10,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <oxy:PlotView Model="{Binding OxyHistogram.Value, Mode=OneWay}" />
+        <oxy:PlotView Model="{Binding OxyLineLevels.Value, Mode=OneWay}" />
     </Grid>
 </UserControl>
