Switching the drawing of line by state

--- a/04_OxyPlotInspector/OxyPlotInspector/Views/MainImage.xaml
+++ b/04_OxyPlotInspector/OxyPlotInspector/Views/MainImage.xaml
@@ -38,7 +38,7 @@
 
         <Line Stroke="Lime"
               StrokeThickness="2"
-              IsEnabled="{Binding LinePoints.IsEnabled, Mode=OneWay}"
+              IsHitTestVisible="False"
               X1="{Binding LinePoints.X1, Mode=OneWay}"
               Y1="{Binding LinePoints.Y1, Mode=OneWay}"
               X2="{Binding LinePoints.X2, Mode=OneWay}"
