--- a/04_OxyPlotInspector/OxyPlotInspector/Views/LineLevels.xaml
+++ b/04_OxyPlotInspector/OxyPlotInspector/Views/LineLevels.xaml
@@ -10,6 +10,24 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="500">
     <Grid>
-        <oxy:PlotView Model="{Binding OxyLineLevels.Value, Mode=OneWay}" />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+
+        <StackPanel Orientation="Horizontal"
+                    Margin="10,5">
+            <CheckBox Margin="0,0,10,0"
+                      Content="Rch"
+                      IsChecked="{Binding IsVisibleRch, Mode=TwoWay}" />
+            <CheckBox Margin="0,0,10,0"
+                      Content="Gch"
+                      IsChecked="{Binding IsVisibleGch, Mode=TwoWay}" />
+            <CheckBox Content="Bch"
+                      IsChecked="{Binding IsVisibleBch, Mode=TwoWay}" />
+        </StackPanel>
+        
+        <oxy:PlotView Grid.Row="1"
+                      Model="{Binding OxyLineLevels.Value, Mode=OneWay}" />
     </Grid>
 </UserControl>
