Add Load OxyPlot dlls lazily

--- a/04_OxyPlotInspector/OxyPlotInspector/Views/MainWindow.xaml
+++ b/04_OxyPlotInspector/OxyPlotInspector/Views/MainWindow.xaml
@@ -22,7 +22,7 @@
                     </Style>
                 </prism:PopupWindowAction.WindowStyle>
                 <prism:PopupWindowAction.WindowContent>
-                    <v:LineLevels/>
+                    <v:LineLevelsSurface />
                 </prism:PopupWindowAction.WindowContent>
             </prism:PopupWindowAction>
         </prism:InteractionRequestTrigger>
