--- a/04_OxyPlotInspector/OxyPlotInspector/Views/MainImage.xaml
+++ b/04_OxyPlotInspector/OxyPlotInspector/Views/MainImage.xaml
@@ -8,6 +8,7 @@
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True"
              xmlns:v="clr-namespace:OxyPlotInspector.Views"
+             xmlns:vb="clr-namespace:OxyPlotInspector.Views.Behaviors"
              xmlns:vec="clr-namespace:OxyPlotInspector.Views.EventConverters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -24,6 +25,10 @@
                         Value="False" />
             </Style>
         </Panel.Resources>
+
+        <i:Interaction.Behaviors>
+            <vb:MouseCaptureBehavior />
+        </i:Interaction.Behaviors>
 
         <i:Interaction.Triggers>
             <i:EventTrigger EventName="PreviewMouseLeftButtonDown">
