--- a/05_SwitchContext/SwitchContext/Views/DoubleImageTabItem.xaml
+++ b/05_SwitchContext/SwitchContext/Views/DoubleImageTabItem.xaml
@@ -9,6 +9,20 @@
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True" >
     <Grid>
-        <TextBlock Text="Double" />
+        <ListBox prism:RegionManager.RegionName="Image2ContentRegion" >
+            <ListBox.Style>
+                <Style TargetType="{x:Type ListBox}">
+                    <Setter Property="ScrollViewer.VerticalScrollBarVisibility"
+                            Value="Hidden" />
+                    <Setter Property="ItemsPanel">
+                        <Setter.Value>
+                            <ItemsPanelTemplate>
+                                <StackPanel Orientation="Horizontal"/>
+                            </ItemsPanelTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.Style>
+        </ListBox>
     </Grid>
 </UserControl>
