Modify Code organization

--- a/05_SwitchContext/SwitchContext/Views/DoubleImageTabItem.xaml
+++ b/05_SwitchContext/SwitchContext/Views/DoubleImageTabItem.xaml
@@ -23,6 +23,12 @@
                     </Setter>
                 </Style>
             </ListBox.Style>
+            <ListBox.ItemContainerStyle>
+                <Style TargetType="ListBoxItem">
+                    <Setter Property="Height"
+                            Value="200" />
+                </Style>
+            </ListBox.ItemContainerStyle>
         </ListBox>
     </Grid>
 </UserControl>
