--- a/05_SwitchContext/SwitchContext/Views/ResourceDictionaries/ListBoxStyleDictionary.xaml
+++ b/05_SwitchContext/SwitchContext/Views/ResourceDictionaries/ListBoxStyleDictionary.xaml
@@ -1,7 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
+
     <Style x:Key="ListBoxStyle"
-           TargetType="{x:Type ListBox}">
+           TargetType="ListBox">
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility"
                 Value="Hidden" />
         <Setter Property="ItemsPanel">
@@ -12,4 +13,11 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style x:Key="ListBoxItemStyle2"
+           TargetType="ListBoxItem">
+        <Setter Property="Height"
+                Value="200" />
+    </Style>
+
 </ResourceDictionary>
