--- a/05_SwitchContext/SwitchContext2/Views/SingleImageTabItem.xaml
+++ b/05_SwitchContext/SwitchContext2/Views/SingleImageTabItem.xaml
@@ -3,12 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:RegionName="clr-namespace:SwitchContext.Common;assembly=RegionName"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              xmlns:prism="http://prismlibrary.com/"
              prism:ViewModelLocator.AutoWireViewModel="True" >
 
-    <ContentControl prism:RegionManager.RegionName="ImageContentRegion1" />
+    <ContentControl prism:RegionManager.RegionName="ImageContentRegion1_0" />
 
 </UserControl>
