--- a/06_Virtualization/VirtualizationListItems/Views/MainWindow.xaml
+++ b/06_Virtualization/VirtualizationListItems/Views/MainWindow.xaml
@@ -11,7 +11,11 @@
         Title="VirtualizationListItems"
         Height="200" Width="400" >
 
-    <Grid>
+    <StackPanel>
+        <Button Margin="0,10,0,0"
+                Content="ReadImages"
+                Command="{Binding ReadImagesCommand, Mode=OneTime}" />
+
         <ContentControl prism:RegionManager.RegionName="ContentRegion" />
-    </Grid>
+    </StackPanel>
 </Window>
